--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ main section:nth-child(3) {
     animation-delay: .4s;
 }
 
+main section:nth-child(4) {
+    animation-delay: .6s;
+}
+
 @keyframes fromTop {
     from {
         opacity: 0;
